# mcp-imagex

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  THIRD_PARTY_NOTICE.txt  pyproject.toml  run.sh  server.py
scripts/: build.sh  debug.sh  publish.sh  run.sh
src/veimagex_mcp/: mcp_server.py
src/veimagex_mcp/api/: imagex.py
veimagex_mcp/: __init__.py  cli.py  mcp_extend.py  mcp_server.py  note.py
veimagex_mcp/api/: config.py  imagex.py
veimagex_mcp/utils/: __init__.py  response.py
